# UMBRA

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/DSP/: AmpProcessor.cpp  AmpProcessor.h  DattorroReverb.h  NeuralAmpModel.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: EqPanel.cpp  EqPanel.h  SharedComponents.cpp  SharedComponents.h
docs/: UMBRA.icns
